[project]
name = "tiled-mcp"
version = "0.1.0"
description = "MCP server for Tiled map editor - enables AI agents to build 2D worlds"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
]

[project.scripts]
tiled-mcp = "tiled_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiled_mcp"]
